# theorem-proving-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
lean_agent/: editing.py  git_utils.py  langgraph_app.py  lean_server.py  main.py  runner.py
sample_project/: Play.lean  lake-manifest.json  lakefile.lean
